--- a/index.html
+++ b/index.html
@@ -12,18 +12,31 @@
 
 </head>
 <body>
-	 <div class="collapse" id="navbarToggleExternalContent">
-    <div class="bg-dark p-4">
-      <h4 class="text-white">Collapsed content</h4>
-      <span class="text-muted">Toggleable via the navbar brand.</span>
-    </div>
-  </div>
-  <nav class="navbar ">
-   
-    <button class="navbar-toggler"  type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-    	<i class="fas fa-bars"></i>
-    </button>
+	 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
+    <div class="container">
+      <a class="navbar-brand js-scroll-trigger" href="#page-top"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        
+        <i class="fas fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger home">HOME</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger skill" >SKILLS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger project" >PROJECT</a>
+          </li>
 
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" >CONTACT</a>
+          </li>
+        </ul>
+      </div>
+    </div>
   </nav>
 <div class="content-home" id="home">
 
