fix view mobile

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a class="nav-link js-scroll-trigger home">HOME</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger skill" >SKILLS</a>
+            <a class="nav-link js-scroll-trigger skill">SKILLS</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger project" >PROJECT</a>
@@ -95,7 +95,7 @@
 <div class="content-skills" id="skill">
 	<div class="row">
 	<div class="col-md-12 text-center title">
-	<b><label for="">SKILLS</label></b>
+	<label for="">SKILLS</label>
 	</div>
 	<div class="col-6 text-center">
 		<b>PROGRAMMING</b>
@@ -104,7 +104,7 @@
 	<div class="col-6 text-center">
 		<b>DESIGN</b>
 	</div>
-	<div class="col-md-3">
+	<div class="col-md-3 col-6">
 		<div class="form-group">
 			<label for="" class="pull-left">
 				PHP
@@ -166,7 +166,7 @@
 		</div>
 
 	</div>
-	<div class="col-md-3">
+	<div class="col-md-3 col-6">
 		
 		<div class="form-group">
 			
@@ -230,7 +230,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="col-md-3">
+	<div class="col-md-3 col-6">
 		<div class="form-group">
 			<label for="" class="pull-left">
 				ADOBE ILLUSTRATOR
@@ -261,7 +261,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="col-md-3">
+	<div class="col-md-3 col-6">
 		
 		<div class="form-group">
 			
