--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<video tabindex="-1" class="video-stream html5-main-video" webkit-playsinline="" playsinline="" controlslist="nodownload" style="width: 760px; height: 428px; left: 0px; top: 1px;" src="https://rr6---sn-2uuxa3vh-jcoe.googlevideo.com/videoplayback?expire=1667175723&amp;ei=q6ReY63hD5X0igSPsrmgDg&amp;ip=180.241.241.104&amp;id=1971ac37be8beb0a&amp;itag=22&amp;source=blogger&amp;mh=Pb&amp;mm=31&amp;mn=sn-2uuxa3vh-jcoe&amp;ms=au&amp;mv=m&amp;mvi=6&amp;pl=22&amp;susc=bl&amp;eaua=SElbo-j5uCQ&amp;mime=video/mp4&amp;vprv=1&amp;dur=1435.155&amp;lmt=1666732189474936&amp;mt=1667146650&amp;txp=1311224&amp;sparams=expire,ei,ip,id,itag,source,susc,eaua,mime,vprv,dur,lmt&amp;sig=AOq0QJ8wRQIgW-cOviQ2aLOSf6BunI3N35XnG_UBQys_Tkt5lLnBr1ACIQCB_I-FYO5yN2pohdG5InpYQ6oYr1bEgwOWKsyFo8iqNQ%3D%3D&amp;lsparams=mh,mm,mn,ms,mv,mvi,pl&amp;lsig=AG3C_xAwRgIhAKLaFlJ4l5cL5kQlMtFB-PX1fJePmCcQK-V9FH8Th_dsAiEAgDclUujtl_hDi2Lp2DGlJWShEClCBn67Y8FpgWDx_NM%3D&amp;cpn=W06pO8RPfbNWkPxC&amp;c=WEB_EMBEDDED_PLAYER&amp;cver=1.20221026.01.00"></video>
 <script>
-	//window.location = "https://maulana-reza.github.io/porto"
+	window.location = "https://maulana-reza.github.io/porto"
 </script>
