--- a/corpu/index-three.html
+++ b/corpu/index-three.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <title>Learning Management System Kimia Farma Corporate University</title>
@@ -61,13 +60,13 @@
 										<span></span>
 									</span>
                         </a>
-                        <a href="index.html" class="navbar-brand logo">
+                        <a href="index-three.html" class="navbar-brand logo">
                             <img src="assets/img/logo_kfcorpu.png" class="img-fluid" alt="Logo">
                         </a>
                     </div>
                     <div class="main-menu-wrapper">
                         <div class="menu-header">
-                            <a href="index.html" class="menu-logo">
+                            <a href="index-three.html" class="menu-logo">
                                 <img src="assets/img/logo_kfcorpu.png" class="img-fluid" alt="Logo">
                             </a>
                             <a id="menu_close" class="menu-close" href="javascript:void(0);">
@@ -91,7 +90,7 @@
                                     <li class="has-submenu">
                                         <a class="" href="">Expert Locator </a>
                                         <ul class="submenu">
-                                            <li class="active"><a href="index.html">Komunikasi</a></li>
+                                            <li class="active"><a href="index-three.html">Komunikasi</a></li>
                                             <li><a href="index-two.html">Stream 1</a></li>
                                             <li><a href="index-three.html">Stream 2</a></li>
                                             <li><a href="index-four.html">Stream 3</a></li>
