--- a/corpu/course-lesson.html
+++ b/corpu/course-lesson.html
@@ -41,13 +41,13 @@
 										<span></span>
 									</span>
 								</a>
-								<a href="index.html" class="navbar-brand logo">
+								<a href="index-three.html" class="navbar-brand logo">
 									<img src="assets/img/logo_kfcorpu.png" class="img-fluid" alt="Logo">
 								</a>
 							</div>
 							<div class="main-menu-wrapper">
 								<div class="menu-header">
-									<a href="index.html" class="menu-logo">
+									<a href="index-three.html" class="menu-logo">
 										<img src="assets/img/logo_kfcorpu.png" class="img-fluid" alt="Logo">
 									</a>
 									<a id="menu_close" class="menu-close" href="javascript:void(0);">
@@ -58,7 +58,7 @@
 									<li class="has-submenu">
 										<a href="">Home <i class="fas fa-chevron-down"></i></a>
 										<ul class="submenu">
-											<li><a href="index.html">Home</a></li>
+											<li><a href="index-three.html">Home</a></li>
 											<li><a href="index-two.html">Home Two</a></li>
 											<li><a href="index-three.html">Home Three</a></li>
 											<li><a href="index-four.html">Home Four</a></li>
