--- a/corpu/index-four.html
+++ b/corpu/index-four.html
@@ -55,13 +55,13 @@
 										<span></span>
 									</span>
 								</a>
-								<a href="index.html" class="navbar-brand logo">
+								<a href="index-three.html" class="navbar-brand logo">
 									<img src="assets/img/logo/logo-five.png" class="img-fluid" alt="Logo">
 								</a>
 							</div>
 							<div class="main-menu-wrapper">
 								<div class="menu-header">
-									<a href="index.html" class="menu-logo">
+									<a href="index-three.html" class="menu-logo">
 										<img src="assets/img/logo/logo-five.svg" class="img-fluid" alt="Logo">
 									</a>
 									<a id="menu_close" class="menu-close" href="javascript:void(0);">
@@ -72,7 +72,7 @@
 									<li class="has-submenu active">
 										<a href="">Home <i class="fas fa-chevron-down"></i></a>
 										<ul class="submenu">
-											<li><a href="index.html">Home</a></li>
+											<li><a href="index-three.html">Home</a></li>
 											<li><a href="index-two.html">Home Two</a></li>
 											<li><a href="index-three.html">Home Three</a></li>
 											<li class="active"><a href="index-four.html">Home Four</a></li>
@@ -4000,7 +4000,7 @@
 							<div class="row align-items-center">
 								<div class="col-md-4">
 									<div class="footer-logo-five">
-										<a href="index.html">
+										<a href="index-three.html">
 											<img src="assets/img/logo/logo-five.svg" class="img-fluid" alt="Footer Logo">
 										</a>
 										
