--- a/corpu/login.html
+++ b/corpu/login.html
@@ -74,7 +74,7 @@
 								<div class="img-logo">
 									<img src="assets/img/logo_kfcorpu.png" class="img-fluid" alt="Logo">
 									<div class="back-home">
-										<a href="index.html">Back to Home</a>
+										<a href="index-three.html">Back to Home</a>
 									</div>
 								</div>
 								<h1>Sign into Your Account</h1>
