--- a/corpu/index-four.html
+++ b/corpu/index-four.html
@@ -3404,7 +3404,7 @@
 					<div class="row align-items-center">
 						<div class="col-x-4 col-lg-3 col-md-12 col-sm-12" data-aos="fade-down">	
 							<div class="header-five-title mb-0">						
-								<h2 class="mb-0">Achieve your Goals with DreamsLMS</h2>
+								<h2 class="mb-0">Achieve your Goals with LMS-KFCORPU</h2>
 							</div>
 						</div>
 						<div class="col-x-8 col-lg-9 col-md-12 col-sm-12">
@@ -4008,7 +4008,7 @@
 								</div>
 								<div class="col-md-4">
 									<div class="copyright-text">
-										<p>&copy; 2023 DreamsLMS. All rights reserved.</p>
+										<p>&copy; 2023 LMS-KFCORPU. All rights reserved.</p>
 									</div>
 								</div>
 								<div class="col-md-4">
