--- a/corpu/index-three.html
+++ b/corpu/index-three.html
@@ -110,7 +110,7 @@
                                 </ul>
                             </li>
                             <li>
-                                <a href="">Vision & Mission</a>
+                                <a href="#vision-and-mission">Vision & Mission</a>
                             </li>
                             <li>
                                 <a href="">About Us</a>
@@ -3943,7 +3943,7 @@
                 <!-- Col -->
                 <div class="col-xl-3 col-lg-12 col-md-12" data-aos="fade-down">
                     <div class="acheive-goals-main">
-                        <h2>Acheive you Goals with DreamsLMS</h2>
+                        <h2>Acheive you Goals with LMS-KFCORPU</h2>
                     </div>
                 </div>
                 <!-- /Col -->
@@ -4034,7 +4034,7 @@
                                     <img src="assets/img/icon-three/award.svg" alt="certified">
                                 </div>
                                 <div class="award-list-content">
-                                    <h2>Vision</h2>
+                                    <h2>VISION</h2>
                                     <p>Menjadi Strategic Engine yang mampu mencetak insan KF yang siap berkompetisi
                                         dalam mendukung tercapainya tujuan bisnis Perusahaan</p>
                                 </div>
@@ -4044,21 +4044,20 @@
                 </div>
             </div>
             <!-- /Award Winning -->
-            <div class="learn-anything">
+            <div class="development-carrer">
                 <div class="row align-items-center">
 
                     <div class="col-xl-6 col-lg-6 col-md-6 col-12" data-aos="fade-up">
-                        <div class="award-three-content-two">
+                        <div class="award-three-content-one">
                             <div class="award-list-info">
-                                <div class="winning-win-icon">
+                                <div class="award-win-icon">
                                     <img class="img-fluid" src="assets/img/icon-three/winning.svg" alt="certified">
                                 </div>
-                                <div class="winning-list-content">
-                                    <h2>Mission</h2>
-
-                                    <p></p>
+                                <div class="award-list-content">
+                                    <h2>MISSION</h2>
                                 </div>
                             </div>
+
                             <div class="award-list d-flex align-items-center">
 										<span class="award-icon">
 											<img src="assets/img/icon-three/check-round-3.svg" alt="" class="img-fluid">
@@ -4088,50 +4087,6 @@
                     </div>
                 </div>
             </div>
-            <!-- /Learn Anything -->
-
-            <!-- development-carrer-->
-            <div class="development-carrer">
-                <div class="row align-items-center">
-                    <div class="col-xl-6 col-lg-6 col-md-6 col-12" data-aos="fade-right">
-                        <div class="award-three-images-three">
-                            <img class="img-fluid" src="assets/img/students/certification.png" alt="image-banner"
-                                 title="image-banner">
-                        </div>
-                    </div>
-
-                    <div class="col-xl-6 col-lg-6 col-md-6 col-12" data-aos="fade-up">
-                        <div class="award-three-content-one">
-                            <div class="award-list-info">
-                                <div class="award-win-icon">
-                                    <img class="img-fluid" src="assets/img/icon-three/winning.svg" alt="certified">
-                                </div>
-                                <div class="award-list-content">
-                                    <h2>Certification for solid development of your Carrer</h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quam dolor fermentum
-                                        massa viverra congue proin. A volutpat eget ultrices velit nunc orci. Commodo
-                                        quis integer a felis ac vel mauris a morbi. Scelerisque </p>
-                                </div>
-                            </div>
-
-                            <div class="award-list d-flex align-items-center">
-										<span class="award-icon">
-											<img src="assets/img/icon-three/check-round-3.svg" alt="" class="img-fluid">
-										</span>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                            </div>
-                            <div class="award-list d-flex align-items-center">
-										<span class="award-icon">
-											<img src="assets/img/icon-three/check-round-3.svg" alt="" class="img-fluid">
-										</span>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- /development-carrer -->
-
         </div>
     </section>
     <!-- Accelerate cloud -->
@@ -4713,7 +4668,7 @@
                 <div class="col-lg-8 col-md-8" data-aos="fade-up">
                     <div class="become-content-three">
                         <h2>Become An Instructor</h2>
-                        <p>Top instructors from around the world teach millions of students on DreamsLMS.</p>
+                        <p>Top instructors from around the world teach millions of students on LMS-KFCORPU.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4" data-aos="fade-up">
@@ -5198,7 +5153,7 @@
                                 </ul>
                             </div>
                             <div class="copyright-text-three">
-                                <p class="mb-0">&copy; 2023 DreamsLMS. All rights reserved.</p>
+                                <p class="mb-0">&copy; 2023 LMS-KFCORPU. All rights reserved.</p>
                             </div>
                         </div>
                     </div>
