--- a/corpu/login.html
+++ b/corpu/login.html
@@ -39,7 +39,7 @@
 								<img src="assets/img/login-img.png" class="img-fluid" alt="Logo">
 							</div>
 							<div class="mentor-course text-center">
-								<h2>Welcome to <br>DreamsLMS Courses.</h2>
+								<h2>Welcome to <br>LMS-KFCORPU Courses.</h2>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 							</div>
 						</div>
@@ -48,7 +48,7 @@
 								<img src="assets/img/login-img.png" class="img-fluid" alt="Logo">
 							</div>
 							<div class="mentor-course text-center">
-								<h2>Welcome to <br>DreamsLMS Courses.</h2>
+								<h2>Welcome to <br>LMS-KFCORPU Courses.</h2>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 							</div>
 						</div>
@@ -57,7 +57,7 @@
 								<img src="assets/img/login-img.png" class="img-fluid" alt="Logo">
 							</div>
 							<div class="mentor-course text-center">
-								<h2>Welcome to <br>DreamsLMS Courses.</h2>
+								<h2>Welcome to <br>LMS-KFCORPU Courses.</h2>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 							</div>
 						</div>
