--- a/corpu/setting-student-referral.html
+++ b/corpu/setting-student-referral.html
@@ -577,7 +577,7 @@
 												<h3>Your Referral Link</h3>
 												<p>Plan your blog post by choosing a topic, creating an outline conduct research, and checking facts</p>
 												<div class="form-group">
-													<input type="text" class="form-control" value="https://dreamslmscourse.com/reffer/?refid=345re667877k9">
+													<input type="text" class="form-control" value="https://LMS-KFCORPUcourse.com/reffer/?refid=345re667877k9">
 												</div>
 												<a href="javascript:;">Copy link</a>
 											</div>
@@ -649,7 +649,7 @@
 															</a>
 														</td>
 														<td>09341</td>
-														<td><span class="text-wrap">https://dreamslmscourse.com/reffer/?refid=345re667877k9</span></td>
+														<td><span class="text-wrap">https://LMS-KFCORPUcourse.com/reffer/?refid=345re667877k9</span></td>
 														<td><a href="javascript:;" class="btn-style"><i class="feather-clipboard"></i></a></td>
 														<td class="text-center">10</td>
 														<td class="text-end">$45.00</td>
@@ -662,7 +662,7 @@
 															</a>
 														</td>
 														<td>09342</td>
-														<td><span class="text-wrap">https://dreamslmscourse.com/reffer/?refid=345re667877k9</span></td>
+														<td><span class="text-wrap">https://LMS-KFCORPUcourse.com/reffer/?refid=345re667877k9</span></td>
 														<td><a href="javascript:;" class="btn-style"><i class="feather-clipboard"></i></a></td>
 														<td class="text-center">15</td>
 														<td class="text-end">$75.00</td>
@@ -675,7 +675,7 @@
 															</a>
 														</td>
 														<td>09343</td>
-														<td><span class="text-wrap">https://dreamslmscourse.com/reffer/?refid=345re667877k9</span></td>
+														<td><span class="text-wrap">https://LMS-KFCORPUcourse.com/reffer/?refid=345re667877k9</span></td>
 														<td><a href="javascript:;" class="btn-style"><i class="feather-clipboard"></i></a></td>
 														<td class="text-center">20</td>
 														<td class="text-end">$100.00</td>
@@ -688,7 +688,7 @@
 															</a>
 														</td>
 														<td>09344</td>
-														<td><span class="text-wrap">https://dreamslmscourse.com/reffer/?refid=345re667877k9</span></td>
+														<td><span class="text-wrap">https://LMS-KFCORPUcourse.com/reffer/?refid=345re667877k9</span></td>
 														<td><a href="javascript:;" class="btn-style"><i class="feather-clipboard"></i></a></td>
 														<td class="text-center">1</td>
 														<td class="text-end">$44.00</td>
@@ -701,7 +701,7 @@
 															</a>
 														</td>
 														<td>09345</td>
-														<td><span class="text-wrap">https://dreamslmscourse.com/reffer/?refid=345re667877k9</span></td>
+														<td><span class="text-wrap">https://LMS-KFCORPUcourse.com/reffer/?refid=345re667877k9</span></td>
 														<td><a href="javascript:;" class="btn-style"><i class="feather-clipboard"></i></a></td>
 														<td class="text-center">5</td>
 														<td class="text-end">$25.00</td>
@@ -714,7 +714,7 @@
 															</a>
 														</td>
 														<td>09346</td>
-														<td><span class="text-wrap">https://dreamslmscourse.com/reffer/?refid=345re667877k9</span></td>
+														<td><span class="text-wrap">https://LMS-KFCORPUcourse.com/reffer/?refid=345re667877k9</span></td>
 														<td><a href="javascript:;" class="btn-style"><i class="feather-clipboard"></i></a></td>
 														<td class="text-center">500</td>
 														<td class="text-end">$160.00</td>
@@ -727,7 +727,7 @@
 															</a>
 														</td>
 														<td>09347</td>
-														<td><span class="text-wrap">https://dreamslmscourse.com/reffer/?refid=345re667877k9</span></td>
+														<td><span class="text-wrap">https://LMS-KFCORPUcourse.com/reffer/?refid=345re667877k9</span></td>
 														<td><a href="javascript:;" class="btn-style"><i class="feather-clipboard"></i></a></td>
 														<td class="text-center">187</td>
 														<td class="text-end">$150.00</td>
@@ -740,7 +740,7 @@
 															</a>
 														</td>
 														<td>09348</td>
-														<td><span class="text-wrap">https://dreamslmscourse.com/reffer/?refid=345re667877k9</span></td>
+														<td><span class="text-wrap">https://LMS-KFCORPUcourse.com/reffer/?refid=345re667877k9</span></td>
 														<td><a href="javascript:;" class="btn-style"><i class="feather-clipboard"></i></a></td>
 														<td class="text-center">10</td>
 														<td class="text-end">$45.00</td>
@@ -753,7 +753,7 @@
 															</a>
 														</td>
 														<td>09349</td>
-														<td><span class="text-wrap">https://dreamslmscourse.com/reffer/?refid=345re667877k9</span></td>
+														<td><span class="text-wrap">https://LMS-KFCORPUcourse.com/reffer/?refid=345re667877k9</span></td>
 														<td><a href="javascript:;" class="btn-style"><i class="feather-clipboard"></i></a></td>
 														<td class="text-center">15</td>
 														<td class="text-end">$10.00</td>
@@ -766,7 +766,7 @@
 															</a>
 														</td>
 														<td>09350</td>
-														<td><span class="text-wrap">https://dreamslmscourse.com/reffer/?refid=345re667877k9</span></td>
+														<td><span class="text-wrap">https://LMS-KFCORPUcourse.com/reffer/?refid=345re667877k9</span></td>
 														<td><a href="javascript:;" class="btn-style"><i class="feather-clipboard"></i></a></td>
 														<td class="text-center">98</td>
 														<td class="text-end">$10.00</td>
@@ -860,7 +860,7 @@
 										</div>
 										<p>
 											<img src="assets/img/icon/icon-19.svg" alt="" class="img-fluid">
-											dreamslms@example.com
+											LMS-KFCORPU@example.com
 										</p>
 										<p class="mb-0">
 											<img src="assets/img/icon/icon-21.svg" alt="" class="img-fluid">
@@ -894,7 +894,7 @@
 								</div>
 								<div class="col-md-6">
 									<div class="copyright-text">
-										<p class="mb-0">&copy; 2023 DreamsLMS. All rights reserved.</p>
+										<p class="mb-0">&copy; 2023 LMS-KFCORPU. All rights reserved.</p>
 									</div>
 								</div>
 							</div>
