--- a/corpu/course-list.html
+++ b/corpu/course-list.html
@@ -1293,7 +1293,7 @@
 										</div>
 										<p>
 											<img src="assets/img/icon/icon-19.svg" alt="" class="img-fluid">
-											dreamslms@example.com
+											LMS-KFCORPU@example.com
 										</p>
 										<p class="mb-0">
 											<img src="assets/img/icon/icon-21.svg" alt="" class="img-fluid">
@@ -1327,7 +1327,7 @@
 								</div>
 								<div class="col-md-6">
 									<div class="copyright-text">
-										<p class="mb-0">&copy; 2023 DreamsLMS. All rights reserved.</p>
+										<p class="mb-0">&copy; 2023 LMS-KFCORPU. All rights reserved.</p>
 									</div>
 								</div>
 							</div>
