--- a/corpu/index-two.html
+++ b/corpu/index-two.html
@@ -1629,7 +1629,7 @@
 										
 										<h6>Email Address</h6>
 										<p>
-											<a href="mailto:dreamslms@example.com">dreamslms@example.com</a>
+											<a href="mailto:LMS-KFCORPU@example.com">LMS-KFCORPU@example.com</a>
 										</p>
 
 										<h6>Phone number</h6>
@@ -1656,7 +1656,7 @@
 							<div class="row">
 								<div class="col-md-6 col-sm-12">
 									<div class="copyright-text">
-										<p class="mb-0">&copy; 2023 DreamsLMS. All rights reserved.</p>
+										<p class="mb-0">&copy; 2023 LMS-KFCORPU. All rights reserved.</p>
 									</div>
 								</div>								
 								<div class="col-md-6 col-sm-12">
