--- a/corpu/register-step-three.html
+++ b/corpu/register-step-three.html
@@ -45,7 +45,7 @@
 								<img src="assets/img/register-img.png" class="img-fluid" alt="Logo">
 							</div>
 							<div class="mentor-course text-center">
-								<h2>Welcome to <br>DreamsLMS Courses.</h2>
+								<h2>Welcome to <br>LMS-KFCORPU Courses.</h2>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 							</div>
 						</div>
@@ -54,7 +54,7 @@
 								<img src="assets/img/register-img.png" class="img-fluid" alt="Logo">
 							</div>
 							<div class="mentor-course text-center">
-								<h2>Welcome to <br>DreamsLMS Courses.</h2>
+								<h2>Welcome to <br>LMS-KFCORPU Courses.</h2>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 							</div>
 						</div>
@@ -63,7 +63,7 @@
 								<img src="assets/img/register-img.png" class="img-fluid" alt="Logo">
 							</div>
 							<div class="mentor-course text-center">
-								<h2>Welcome to <br>DreamsLMS Courses.</h2>
+								<h2>Welcome to <br>LMS-KFCORPU Courses.</h2>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 							</div>
 						</div>
