--- a/corpu/register.html
+++ b/corpu/register.html
@@ -42,7 +42,7 @@
 								<img src="assets/img/login-img.png" class="img-fluid" alt="Logo">
 							</div>
 							<div class="mentor-course text-center">
-								<h2>Welcome to <br>DreamsLMS Courses.</h2>
+								<h2>Welcome to <br>LMS-KFCORPU Courses.</h2>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 							</div>
 						</div>
@@ -51,7 +51,7 @@
 								<img src="assets/img/login-img.png" class="img-fluid" alt="Logo">
 							</div>
 							<div class="mentor-course text-center">
-								<h2>Welcome to <br>DreamsLMS Courses.</h2>
+								<h2>Welcome to <br>LMS-KFCORPU Courses.</h2>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 							</div>
 						</div>
@@ -60,7 +60,7 @@
 								<img src="assets/img/login-img.png" class="img-fluid" alt="Logo">
 							</div>
 							<div class="mentor-course text-center">
-								<h2>Welcome to <br>DreamsLMS Courses.</h2>
+								<h2>Welcome to <br>LMS-KFCORPU Courses.</h2>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 							</div>
 						</div>
