--- a/corpu/term-condition.html
+++ b/corpu/term-condition.html
@@ -244,7 +244,7 @@
 								<div class="terms-text">
 									<h4>Changes about terms</h4>
 									<p>If we change our terms of use we will post those changes on this page. Registered users will be sent an email that outlines changes made to the terms of use.</p>
-									<p>Questions? Please email us at <a href="javascript:void(0);">dreamslms@example.com</a></p>
+									<p>Questions? Please email us at <a href="javascript:void(0);">LMS-KFCORPU@example.com</a></p>
 								</div>
 							</div>
 						</div>
@@ -327,7 +327,7 @@
 										</div>
 										<p>
 											<img src="assets/img/icon/icon-19.svg" alt="" class="img-fluid">
-											dreamslms@example.com
+											LMS-KFCORPU@example.com
 										</p>
 										<p class="mb-0">
 											<img src="assets/img/icon/icon-21.svg" alt="" class="img-fluid">
@@ -361,7 +361,7 @@
 								</div>
 								<div class="col-md-6">
 									<div class="copyright-text">
-										<p class="mb-0">&copy; 2023 DreamsLMS. All rights reserved.</p>
+										<p class="mb-0">&copy; 2023 LMS-KFCORPU. All rights reserved.</p>
 									</div>
 								</div>
 							</div>
