--- a/corpu/come-soon.html
+++ b/corpu/come-soon.html
@@ -37,7 +37,7 @@
 			
 			<div class="error-box">
 				<div class="error-logo">
-					<a href="index-three.html">
+					<a href="index.html">
 						<img src="assets/img/logo_kfcorpu.png" class="img-fluid" alt="Logo">
 					</a>
 				</div>
