--- a/corpu/error-404.html
+++ b/corpu/error-404.html
@@ -29,7 +29,7 @@
 			
 			<div class="error-box">
 				<div class="error-logo">
-					<a href="index-three.html">
+					<a href="index.html">
 						<img src="assets/img/logo_kfcorpu.png" class="img-fluid" alt="Logo">
 					</a>
 				</div>
@@ -38,7 +38,7 @@
 				</div>
 				<h3 class="h2 mb-3"> Oh No! Error 404</h3>
 				<p class="h4 font-weight-normal">This page you requested counld not found. May the force be with you!</p>
-				<a href="index-three.html" class="btn btn-primary">Back to Home</a>
+				<a href="index.html" class="btn btn-primary">Back to Home</a>
 			</div>
 		
         </div>
