--- a/corpu/forgot-password.html
+++ b/corpu/forgot-password.html
@@ -76,7 +76,7 @@
 							<div class="img-logo">
 								<img src="assets/img/logo_kfcorpu.png" class="img-fluid" alt="Logo">
 								<div class="back-home">
-									<a href="index-three.html">Back to Home</a>
+									<a href="index.html">Back to Home</a>
 								</div>
 							</div>
 							<h1>Forgot Password ?</h1>
