--- a/corpu/students-grid.html
+++ b/corpu/students-grid.html
@@ -41,13 +41,13 @@
 										<span></span>
 									</span>
 								</a>
-								<a href="index-three.html" class="navbar-brand logo">
+								<a href="index.html" class="navbar-brand logo">
 									<img src="assets/img/logo_kfcorpu.png" class="img-fluid" alt="Logo">
 								</a>
 							</div>
 							<div class="main-menu-wrapper">
 								<div class="menu-header">
-									<a href="index-three.html" class="menu-logo">
+									<a href="index.html" class="menu-logo">
 										<img src="assets/img/logo_kfcorpu.png" class="img-fluid" alt="Logo">
 									</a>
 									<a id="menu_close" class="menu-close" href="javascript:void(0);">
@@ -58,9 +58,9 @@
 									<li class="has-submenu">
 										<a href="">Home <i class="fas fa-chevron-down"></i></a>
 										<ul class="submenu">
-											<li><a href="index-three.html">Home</a></li>
+											<li><a href="index.html">Home</a></li>
 											<li><a href="index-two.html">Home Two</a></li>
-											<li><a href="index-three.html">Home Three</a></li>
+											<li><a href="index.html">Home Three</a></li>
 											<li><a href="index-four.html">Home Four</a></li>
 										</ul>
 									</li>
@@ -411,7 +411,7 @@
 												<input class="form-check-input" type="checkbox" id="night-mode">
 											</div>
 										</div>
-										<a class="dropdown-item" href="index-three.html"><i class="feather-log-out me-1"></i> Logout</a>
+										<a class="dropdown-item" href="index.html"><i class="feather-log-out me-1"></i> Logout</a>
 									</div>
 								</li>
 							</ul>
@@ -429,7 +429,7 @@
 							<div class="breadcrumb-list">
 								<nav aria-label="breadcrumb" class="page-breadcrumb">
 									<ol class="breadcrumb">
-										<li class="breadcrumb-item"><a href="index-three.html">Home</a></li>
+										<li class="breadcrumb-item"><a href="index.html">Home</a></li>
 										<li class="breadcrumb-item">Pages</li>
 										<li class="breadcrumb-item">Students Grid</li>
 									</ol>
