--- a/corpu/under-construction.html
+++ b/corpu/under-construction.html
@@ -26,7 +26,7 @@
 			
 			<div class="error-box">
 				<div class="error-logo">
-					<a href="index-three.html">
+					<a href="index.html">
 						<img src="assets/img/logo_kfcorpu.png" class="img-fluid" alt="Logo">
 					</a>
 				</div>
@@ -35,7 +35,7 @@
 				</div>
 				<h3 class="h2 mb-3"> The Website is Under Construction</h3>
 				<p class="h4 font-weight-normal">We are working on fixing the problem. We back soon</p>
-				<a href="index-three.html" class="btn btn-primary">Back to Home</a>
+				<a href="index.html" class="btn btn-primary">Back to Home</a>
 			</div>
 		
         </div>
