--- a/corpu/index.html
+++ b/corpu/index.html
@@ -5028,154 +5028,11 @@
     </section>
     <!-- /Latest Blog -->
 
-    <!-- Testimonial -->
-    <section class="testimonial-three" id="about-us">
-        <div class="container">
-            <div class="testimonial-three-content">
-                <div class="row align-items-center">
-                    <div class="col-xl-6 col-lg-12 col-md-12" data-aos="fade-down">
-                        <div class="become-content">
-                            <h2 class="aos-init aos-animate">About Us</h2>
-                            <h4 class="aos-init aos-animate">We are a very happy because we have a happy customer</h4>
-                        </div>
-
-                        <!-- View all Testimonail -->
-                        <a href="instructor-profile.html" class="btn btn-action aos-init aos-animate"
-                           data-aos="fade-up">View all Testimonail</a>
-                        <!-- View all Testimonail -->
-
-                    </div>
-                    <div class="col-xl-6 col-lg-12 col-md-12" data-aos="fade-down">
-                        <div class="swiper-testimonial-three">
-                            <div class="swiper-wrapper">
-
-                                <!-- Swiper Slide -->
-                                <div class="swiper-slide">
-                                    <div class="testimonial-item-five">
-                                        <div class="testimonial-quote">
-                                            <img class="quote img-fluid" alt="" src="assets/img/bg/quote.svg">
-                                        </div>
-                                        <div class="testimonial-content">
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Egestas pretium
-                                                feugiat tellus eget vitae sagittis id in. In in tempor ac dignissim at.
-                                                Scelerisque sociis consequat sit dolor. Vitae donec porttitor risus
-                                                tellus eget vitae sagittis id in. In in tempor ac dignissim at.
-                                                Scelerisque sociis consequat </p>
-                                        </div>
-                                        <div class="testimonial-ratings">
-                                            <div class="rating">
-                                                <i class="fas fa-star filled"></i>
-                                                <i class="fas fa-star filled"></i>
-                                                <i class="fas fa-star filled"></i>
-                                                <i class="fas fa-star filled"></i>
-                                                <i class="fas fa-star"></i>
-                                                <p class="d-inline-block">4.5<span>ratings</span></p>
-                                            </div>
-                                        </div>
-                                        <div class="testimonial-users">
-                                            <div class="imgbx">
-                                                <img class="img-fluid" alt="" src="assets/img/profiles/avatar-02.jpg">
-                                            </div>
-                                            <div class="d-block">
-                                                <h6>Jeff J. Sparrow</h6>
-                                                <p>Designer</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!-- /Swiper Slide -->
-
-                                <!-- Swiper Slide -->
-                                <div class="swiper-slide">
-                                    <div class="testimonial-item-five">
-                                        <div class="testimonial-quote">
-                                            <img class="quote img-fluid" alt="" src="assets/img/bg/quote.svg">
-                                        </div>
-                                        <div class="testimonial-content">
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Egestas pretium
-                                                feugiat tellus eget vitae sagittis id in. In in tempor ac dignissim at.
-                                                Scelerisque sociis consequat sit dolor. Vitae donec porttitor risus
-                                                tellus eget vitae sagittis id in. In in tempor ac dignissim at.
-                                                Scelerisque sociis consequat </p>
-                                        </div>
-                                        <div class="testimonial-ratings">
-                                            <div class="rating">
-                                                <i class="fas fa-star filled"></i>
-                                                <i class="fas fa-star filled"></i>
-                                                <i class="fas fa-star filled"></i>
-                                                <i class="fas fa-star filled"></i>
-                                                <i class="fas fa-star"></i>
-                                                <p class="d-inline-block">4.5<span>ratings</span></p>
-                                            </div>
-                                        </div>
-                                        <div class="testimonial-users">
-                                            <div class="imgbx">
-                                                <img class="" alt="" src="assets/img/profiles/avatar-01.jpg">
-                                            </div>
-                                            <div class="d-block">
-                                                <h6>Martin Harn</h6>
-                                                <p>Docker Development</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!-- /Swiper Slide -->
-
-                                <!-- Swiper Slide -->
-                                <div class="swiper-slide">
-                                    <div class="testimonial-item-five">
-                                        <div class="testimonial-quote">
-                                            <img class="quote img-fluid" alt="" src="assets/img/bg/quote.svg">
-                                        </div>
-                                        <div class="testimonial-content">
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Egestas pretium
-                                                feugiat tellus eget vitae sagittis id in. In in tempor ac dignissim at.
-                                                Scelerisque sociis consequat sit dolor. Vitae donec porttitor risus
-                                                tellus eget vitae sagittis id in. In in tempor ac dignissim at.
-                                                Scelerisque sociis consequat </p>
-                                        </div>
-                                        <div class="testimonial-ratings">
-                                            <div class="rating">
-                                                <i class="fas fa-star filled"></i>
-                                                <i class="fas fa-star filled"></i>
-                                                <i class="fas fa-star filled"></i>
-                                                <i class="fas fa-star filled"></i>
-                                                <i class="fas fa-star"></i>
-                                                <p class="d-inline-block">4.8<span>ratings</span></p>
-                                            </div>
-                                        </div>
-                                        <div class="testimonial-users">
-                                            <div class="imgbx">
-                                                <img class="" alt="" src="assets/img/profiles/avatar-05.jpg">
-                                            </div>
-                                            <div class="d-block">
-                                                <h6>Noah Aarons</h6>
-                                                <p>Business Man</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!-- /Swiper Slide -->
-
-
-                            </div>
-                            <div class="testimonial-bottom-nav">
-                                <div class="slide-next-btn testimonial-next-pre"><i class="fas fa-arrow-left"></i></div>
-                                <div class="slide-prev-btn testimonial-next-pre"><i class="fas fa-arrow-right"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--/Testimonial -->
     <section class="latest-blog-three">
 
     </section>
     <!-- Footer -->
-    <footer class="footer footer-three">
+    <footer class="footer footer-three" id="about-us">
 
         <!-- Footer Top -->
         <div class="footer-three-top" data-aos="fade-up">
