--- a/corpu/index.html
+++ b/corpu/index.html
@@ -133,7 +133,10 @@
         <div class="container">
             <div class="row ">
                 <div class="col-xl-6 col-lg-8 col-md-12 col-12" data-aos="fade-down">
+
                     <div class="home-three-slide-face">
+                        <img class="img-fluid mb-2 rounded shadow d-sm-none" src="assets/img/slider/home-slider.png" alt="" style="margin-top:-70px;">
+
                         <div class="home-three-slide-text">
                             <h5>You're Learning Bussines Partner</h5>
                             <h1>Engaging <span>&</span> Accessible Online Courses For Our Employee</h1>
@@ -279,6 +282,7 @@
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-12" data-aos="fade-left">
                     <div class="home-three-head" data-aos="fade-up">
+
                         <h2>Master the skills to drive your career</h2>
                     </div>
                     <div class="home-three-content" data-aos="fade-up">
