--- a/corpu/index.html
+++ b/corpu/index.html
@@ -136,7 +136,6 @@
 
                     <div class="home-three-slide-face">
                         <img class="img-fluid mb-2 rounded shadow d-sm-none" src="assets/img/slider/home-slider.png" alt="" style="margin-top:-70px;">
-
                         <div class="home-three-slide-text">
                             <h5>You're Learning Bussines Partner</h5>
                             <h1>Engaging <span>&</span> Accessible Online Courses For Our Employee</h1>
@@ -274,7 +273,7 @@
             <div class="row">
                 <div class="col-xl-6 col-lg-6 col-md-12" data-aos="fade-right">
                     <div class="master-three-images">
-                        <div class="master-three-left">
+                        <div class="master-three-left ">
                             <img class="img-fluid" src="assets/img/students/career.png" alt="image-banner"
                                  title="image-banner">
                         </div>
@@ -4022,7 +4021,7 @@
                 <div class="row align-items-center">
                     <div class="col-xl-6 col-lg-6 col-md-6 col-12" data-aos="fade-right">
                         <div class="award-three-images-one">
-                            <img class="img-fluid" src="assets/img/students/award-01.png" alt="image-banner"
+                            <img class="img-fluid shadow rounded" src="assets/img/students/award-01.png" alt="image-banner"
                                  title="image-banner">
                         </div>
                     </div>
@@ -4035,8 +4034,7 @@
                                 </div>
                                 <div class="award-list-content">
                                     <h2>VISION</h2>
-                                    <p>Menjadi Strategic Engine yang mampu mencetak insan KF yang siap berkompetisi
-                                        dalam mendukung tercapainya tujuan bisnis Perusahaan</p>
+                                    <p>Menjadi center of excellence dalam pencapaian visi, misi, dan sasaran strategis PT. Kimia Farma, Tbk.</p>
                                 </div>
                             </div>
                         </div>
@@ -4060,21 +4058,22 @@
 
                             <div class="award-list d-flex align-items-center">
 										<span class="award-icon">
-											<img src="assets/img/icon-three/check-round-3.svg" alt="" class="img-fluid">
+											<img src="assets/img/icon-three/check-round-3.svg" alt="" class="w-10">
 										</span>
-                                <p>Menjadi Akademi Farmasi terbaik di Indonesia</p>
+                                <p>Membangun dan menguatkan budaya pembelajaran di KF Group</p>
+                            </div>
+
+                            <div class="award-list d-flex align-items-center">
+										<span class="award-icon">
+											<img src="assets/img/icon-three/check-round-3.svg" alt="" class="w-10">
+										</span>
+                                <p>Mempercepat transformasi bisnis melalui peningkatan pembelajaran dan manajemen pengetahuan untuk mendorong inovasi</p>
                             </div>
                             <div class="award-list d-flex align-items-center">
 										<span class="award-icon">
-											<img src="assets/img/icon-three/check-round-3.svg" alt="" class="img-fluid">
+											<img src="assets/img/icon-three/check-round-3.svg" alt="" class="w-10">
 										</span>
-                                <p>Menjadi Akademi Pimpinan Farmasi terbaik di Indonesia</p>
-                            </div>
-                            <div class="award-list d-flex align-items-center">
-										<span class="award-icon">
-											<img src="assets/img/icon-three/check-round-3.svg" alt="" class="img-fluid">
-										</span>
-                                <p>Menjadi Korporasi dengan penyedia content KM terbaik</p>
+                                <p>Melaksanakan program pembelajaran sesuai dengan kebutuhan bisnis</p>
                             </div>
                         </div>
                     </div>
@@ -4687,7 +4686,7 @@
             <div class="home-three-head section-header-title aos-init aos-animate">
                 <div class="row align-items-center d-flex justify-content-between">
                     <div class="col-lg-12" data-aos="fade-up">
-                        <h2>500+ Leading Universities And Companies</h2>
+                        <h2>500+ Leading Companies</h2>
                     </div>
                 </div>
             </div>
